option to maximize communication score changes

--- a/notebooks/simulation/simulate.ipynb
+++ b/notebooks/simulation/simulate.ipynb
@@ -285,23 +285,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fold_change_pattern(initial_value):\n",
+    "def fold_change_pattern(initial_value, score_change = 'max'):\n",
     "    '''The maximum change in the average LR score given the starting value'''\n",
     "    decrease = False\n",
     "    if initial_value > 0.5:\n",
     "        initial_value = 0.5 - (initial_value - 0.5)\n",
     "        decrease = True\n",
     "    \n",
-    "    if initial_value >= 0.2:\n",
-    "        change = 2*initial_value\n",
+    "    if score_change == 'max':\n",
+    "        change = 1 - initial_value\n",
+    "    elif score_change == 'scale':\n",
+    "        if initial_value >= 0.2:\n",
+    "            change = 2*initial_value\n",
+    "        else:\n",
+    "            change = initial_value + 0.2\n",
+    "        change = change - initial_value\n",
     "    else:\n",
-    "        change = initial_value + 0.2\n",
-    "    \n",
-    "    change = change - initial_value\n",
+    "        raise ValueError('Argument score_change can only be \"scale\" or \"max\"')\n",
     "    \n",
     "    if decrease:\n",
     "        change = - change\n",
@@ -486,7 +490,7 @@
     "        return G2\n",
     "    \n",
     "    def generate_tensor_md(self, n_patterns, n_conditions, patterns = ['pulse', 'linear', 'oscillate'], \n",
-    "                          consider_homotypic = True):\n",
+    "                          consider_homotypic = True, score_change = 'max'):\n",
     "        '''Generates cell-LR metadata pairs for tensor slices.\n",
     "        \n",
     "        Parameters\n",
@@ -503,6 +507,9 @@
     "        consider_homotypic: bool\n",
     "            whether to allow homotypic interactions to have patterns. If False, homotypic interactions are guaranteed\n",
     "            to be a part of the background. \n",
+    "        score_change: str\n",
+    "            one of ['max', 'scale']. max will make the change in scores as large as possible, scale will scale \n",
+    "            the change relative to the distance of the comunication from 0.5 at condition '0'\n",
     "        \n",
     "        Returns\n",
     "        ---------\n",
@@ -601,7 +608,7 @@
     "\n",
     "        self.clrm = pd.concat([self.clrm,\n",
     "                  pd.DataFrame(index = self.clrm.index, columns = [str(i) for i in range(1,self.n_conditions)])], axis = 1)\n",
-    "        self.clrm.insert(3, 'change', self.clrm['0'].apply(lambda x: fold_change_pattern(x)))\n",
+    "        self.clrm.insert(3, 'change', self.clrm['0'].apply(fold_change_pattern, args = (score_change,)))\n",
     "\n",
     "        # apply patterns to get averages across conditions\n",
     "        if self.n_conditions > 1:\n",
@@ -726,87 +733,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/hratch/Projects/cci_dt/notebooks/simulation/tmpw3zm8bxd_bipartite_sf.csv\n",
-      "Generate undirected, bipartite, scale-free graph\n",
-      "Check network properties\n",
-      "All properties are as expected\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "../../scripts/simulation/graphs.py:164: UserWarning: 67 nodes are disconnected, removing from network\n",
-      "  warnings.warn(mssg)\n",
-      "/home/hratch/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:340: UserWarning: Only continuous scoring is currently implemented\n",
-      "/home/hratch/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:370: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
-      "  0%|          | 0/12 [00:00<?, ?it/s]/home/hratch/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:421: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
-      " 17%|█▋        | 2/12 [00:00<00:00, 19.70it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generate reshaped tensor\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 12/12 [00:00<00:00, 19.88it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# # init\n",
-    "# sim = Simulate() \n",
-    "# # sim_norm = Simulate()\n",
+    "# init\n",
+    "sim = Simulate() \n",
+    "# sim_norm = Simulate()\n",
     "\n",
-    "# # simulate a scale_free randomly connected ligand-receptor network (potential interactions)\n",
-    "# sim.LR_network(network_type = 'scale-free', **{'nodes': 100, 'degrees': 3, 'alpha': 2}) #scale-free\n",
+    "# simulate a scale_free randomly connected ligand-receptor network (potential interactions)\n",
+    "sim.LR_network(network_type = 'scale-free', **{'nodes': 100, 'degrees': 3, 'alpha': 2}) #scale-free\n",
     "\n",
-    "# # # simulate a ranodmly connected network with nomral distributions\n",
-    "# # sim_norm.LR_network(network_type = 'normal', **{'n_ligands': 500, 'n_receptors': 500, 'p': 0.5}) # normally distributed\n",
+    "# # simulate a ranodmly connected network with nomral distributions\n",
+    "# sim_norm.LR_network(network_type = 'normal', **{'n_ligands': 500, 'n_receptors': 500, 'p': 0.5}) # normally distributed\n",
     "\n",
     "\n",
-    "# # LR metadata\n",
-    "# sim.LR.generate_metadata(n_LR_cats = {3: 0}, cat_skew = 0)\n",
+    "# LR metadata\n",
+    "sim.LR.generate_metadata(n_LR_cats = {3: 0}, cat_skew = 0)\n",
     "\n",
-    "# # generate cell metadata, accounting for directionality (senders vs receivers) and \n",
-    "# # allowing for autocrine interactions \n",
-    "# cci = CCI_MD()\n",
-    "# cci.cci_network(n_cells = 50, directional = True, autocrine = True)\n",
+    "# generate cell metadata, accounting for directionality (senders vs receivers) and \n",
+    "# allowing for autocrine interactions \n",
+    "cci = CCI_MD()\n",
+    "cci.cci_network(n_cells = 50, directional = True, autocrine = True)\n",
     "\n",
-    "# # generate 1 metadata categories, with 3 subcategories and 0 skew, the overall skew of categories is 0\n",
-    "# # do not remove homotypic interactions (will be included)\n",
-    "# cci.generate_metadata(n_cell_cats = {3: 0}, cat_skew = 0, remove_homotypic = 0)\n",
-    "# # add cell metadata to simulation object\n",
-    "# sim.cci = cci\n",
+    "# generate 1 metadata categories, with 3 subcategories and 0 skew, the overall skew of categories is 0\n",
+    "# do not remove homotypic interactions (will be included)\n",
+    "cci.generate_metadata(n_cell_cats = {3: 0}, cat_skew = 0, remove_homotypic = 0)\n",
+    "# add cell metadata to simulation object\n",
+    "sim.cci = cci\n",
     "\n",
-    "# # generate n_patter metadata groups of CC-LR pairs that change across n_conditions\n",
-    "# # these changes can either be linear, oscillating, or a pulse; allow homotypic interactions to form patterns\n",
-    "# sim.generate_tensor_md(n_patterns = 4, n_conditions = 12, patterns = ['pulse', 'linear', 'oscillate'], \n",
-    "#                       consider_homotypic = True)\n",
+    "# generate n_patter metadata groups of CC-LR pairs that change across n_conditions\n",
+    "# these changes can either be linear, oscillating, or a pulse; allow homotypic interactions to form patterns\n",
+    "# maximize the possible change in communication score\n",
+    "sim.generate_tensor_md(n_patterns = 4, n_conditions = 12, patterns = ['pulse', 'linear', 'oscillate'], \n",
+    "                      consider_homotypic = True, score_change = 'max')\n",
     "\n",
-    "# #generate a tensor with continuous LR scores and no noise; keep single-cells \n",
-    "# sim.generate_tensor(noise = 0, binary = False, bulk = False)\n",
+    "#generate a tensor with continuous LR scores and no noise; keep single-cells \n",
+    "sim.generate_tensor(noise = 0, binary = False, bulk = True)\n",
     "\n",
-    "# # format the tensor to be input to tensor-cell2cell\n",
-    "# sim.reshape()"
+    "# format the tensor to be input to tensor-cell2cell\n",
+    "sim.reshape()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,8 +808,9 @@
     "\n",
     "# # generate n_patter metadata groups of CC-LR pairs that change across n_conditions\n",
     "# # these changes can either be linear, oscillating, or a pulse; allow homotypic interactions to form patterns\n",
+    "# # maximize the possible change in communication score\n",
     "# sim.generate_tensor_md(n_patterns = 4, n_conditions = 12, patterns = ['pulse', 'linear', 'oscillate'], \n",
-    "#                       consider_homotypic = True)\n",
+    "#                       consider_homotypic = True, score_change = 'max')\n",
     "\n",
     "# #generate a tensor with continuous LR scores and no noise; keep single-cells \n",
     "# sim.generate_tensor(noise = 0, binary = False, bulk = True)\n",
@@ -847,12 +819,13 @@
     "# sim.reshape()\n",
     "\n",
     "\n",
+    "# dir_nam = 'tmp_maxscore/'\n",
     "# import pickle\n",
-    "# if not os.path.isdir('tmp_sim_forerick'):\n",
-    "#     os.mkdir('tmp_sim_forerick')\n",
+    "# if not os.path.isdir(dir_nam):\n",
+    "#     os.mkdir(dir_nam)\n",
     "# for k,v in sim.sim_tensor.__dict__.items():\n",
     "#     if k != 'rank':\n",
-    "#         with open('tmp_sim_forerick/' + k + '.pickle','wb') as f:\n",
+    "#         with open(dir_nam + k + '.pickle','wb') as f:\n",
     "#             pickle.dump(v, f, protocol=pickle.HIGHEST_PROTOCOL)"
    ]
   }
