add exponential change to patterns

--- a/notebooks/simulation/simulate.ipynb
+++ b/notebooks/simulation/simulate.ipynb
@@ -9,8 +9,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/hratch/anaconda3/lib/python3.7/site-packages/scipy/optimize/minpack.py:799: OptimizeWarning: Covariance of the parameters could not be estimated\n",
-      "  category=OptimizeWarning)\n"
+      "/home/hratch/anaconda3/envs/cci_dt/lib/python3.9/site-packages/scipy/optimize/minpack.py:828: OptimizeWarning: Covariance of the parameters could not be estimated\n",
+      "  warnings.warn('Covariance of the parameters could not be estimated',\n"
      ]
     }
    ],
@@ -315,6 +315,29 @@
     "def linear(x, n_conditions):\n",
     "    return list(np.linspace(x[1], x[1] + x[0], n_conditions))\n",
     "\n",
+    "def fit_increasing_power(x,adj1,adj2,pw):\n",
+    "    return ((x+adj1) ** pw) * adj2\n",
+    "\n",
+    "def power(x, n_conditions):\n",
+    "    change, initial_val = x[0], x[1]\n",
+    "    if change > 0: \n",
+    "        # https://stackoverflow.com/questions/33186740/fitting-exponential-function-through-two-data-points-with-scipy-curve-fit\n",
+    "        p1 = [1, n_conditions] \n",
+    "        p2 = [initial_val, initial_val + change]\n",
+    "\n",
+    "        pw = 0.2\n",
+    "        A = np.exp(np.log(p2[0]/p2[1])/pw)\n",
+    "        a = (p1[0] - p1[1]*A)/(A-1)\n",
+    "        b = p2[0]/(p1[0]+a)**pw\n",
+    "        xf=np.linspace(1,n_conditions, n_conditions)\n",
+    "        vector = fit_increasing_power(xf, a, b, pw)\n",
+    "    else:\n",
+    "        if initial_val + change == 0:\n",
+    "            vector = np.geomspace(initial_val, initial_val + change + 1e-9, num=n_conditions)\n",
+    "        else:\n",
+    "            vector = np.geomspace(initial_val, initial_val + change, num=n_conditions)\n",
+    "    return vector\n",
+    "\n",
     "def pulse(x, n_conditions):\n",
     "    change = x[0]\n",
     "    initial_val = x[1]\n",
@@ -352,7 +375,8 @@
     "    else:\n",
     "        return pulse(x, n_conditions)\n",
     "\n",
-    "pattern_mapper = {'linear': linear, 'pulse': pulse, 'oscillate': oscillate}\n",
+    "pattern_mapper = {'linear': linear, 'pulse': pulse, 'oscillate': oscillate, \n",
+    "                 'power': power}\n",
     "\n",
     "def generate_pattern(x, n_conditions):\n",
     "    vector = pattern_mapper[x[0]](x[1:], n_conditions)\n",
@@ -489,7 +513,7 @@
     "        gg.drop_disconnected_nodes(G2)\n",
     "        return G2\n",
     "    \n",
-    "    def generate_tensor_md(self, n_patterns, n_conditions, patterns = ['pulse', 'linear', 'oscillate'], \n",
+    "    def generate_tensor_md(self, n_patterns, n_conditions, patterns = ['pulse', 'linear', 'oscillate', 'power'], \n",
     "                          consider_homotypic = True, score_change = 'max'):\n",
     "        '''Generates cell-LR metadata pairs for tensor slices.\n",
     "        \n",
@@ -503,7 +527,7 @@
     "            the number of conditions across which to generate tensor slices \n",
     "        patterns: list\n",
     "            list of strings, each of which should be included as a potential pattern for a given cell \n",
-    "            metadata - LR metadata pair. Options: ['pulse', 'linear', 'exponential', 'oscillate']\n",
+    "            metadata - LR metadata pair. Options: ['pulse', 'linear', 'power', 'oscillate']\n",
     "        consider_homotypic: bool\n",
     "            whether to allow homotypic interactions to have patterns. If False, homotypic interactions are guaranteed\n",
     "            to be a part of the background. \n",
@@ -518,7 +542,7 @@
     "            alongside the expected average score for each condition\n",
     "        '''\n",
     "        #checks------------------------------------------------------------------------------------------------\n",
-    "        allowed_patterns = ['pulse', 'linear', 'oscillate']\n",
+    "        allowed_patterns = ['pulse', 'linear', 'oscillate', 'power']\n",
     "        if patterns is not None:\n",
     "            if len(set(patterns).difference(allowed_patterns)) > 0:\n",
     "                raise ValueError('Patterns can only include: ' + ', '.join(allowed_patterns))\n",
@@ -733,51 +757,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# init\n",
-    "sim = Simulate() \n",
-    "# sim_norm = Simulate()\n",
+    "# # init\n",
+    "# sim = Simulate() \n",
+    "# # sim_norm = Simulate()\n",
     "\n",
-    "# simulate a scale_free randomly connected ligand-receptor network (potential interactions)\n",
-    "sim.LR_network(network_type = 'scale-free', **{'nodes': 100, 'degrees': 3, 'alpha': 2}) #scale-free\n",
+    "# # simulate a scale_free randomly connected ligand-receptor network (potential interactions)\n",
+    "# sim.LR_network(network_type = 'scale-free', **{'nodes': 100, 'degrees': 3, 'alpha': 2}) #scale-free\n",
     "\n",
-    "# # simulate a ranodmly connected network with nomral distributions\n",
-    "# sim_norm.LR_network(network_type = 'normal', **{'n_ligands': 500, 'n_receptors': 500, 'p': 0.5}) # normally distributed\n",
+    "# # # simulate a ranodmly connected network with nomral distributions\n",
+    "# # sim_norm.LR_network(network_type = 'normal', **{'n_ligands': 500, 'n_receptors': 500, 'p': 0.5}) # normally distributed\n",
     "\n",
     "\n",
-    "# LR metadata\n",
-    "sim.LR.generate_metadata(n_LR_cats = {3: 0}, cat_skew = 0)\n",
+    "# # LR metadata\n",
+    "# sim.LR.generate_metadata(n_LR_cats = {3: 0}, cat_skew = 0)\n",
     "\n",
-    "# generate cell metadata, accounting for directionality (senders vs receivers) and \n",
-    "# allowing for autocrine interactions \n",
-    "cci = CCI_MD()\n",
-    "cci.cci_network(n_cells = 50, directional = True, autocrine = True)\n",
+    "# # generate cell metadata, accounting for directionality (senders vs receivers) and \n",
+    "# # allowing for autocrine interactions \n",
+    "# cci = CCI_MD()\n",
+    "# cci.cci_network(n_cells = 50, directional = True, autocrine = True)\n",
     "\n",
-    "# generate 1 metadata categories, with 3 subcategories and 0 skew, the overall skew of categories is 0\n",
-    "# do not remove homotypic interactions (will be included)\n",
-    "cci.generate_metadata(n_cell_cats = {3: 0}, cat_skew = 0, remove_homotypic = 0)\n",
-    "# add cell metadata to simulation object\n",
-    "sim.cci = cci\n",
+    "# # generate 1 metadata categories, with 3 subcategories and 0 skew, the overall skew of categories is 0\n",
+    "# # do not remove homotypic interactions (will be included)\n",
+    "# cci.generate_metadata(n_cell_cats = {3: 0}, cat_skew = 0, remove_homotypic = 0)\n",
+    "# # add cell metadata to simulation object\n",
+    "# sim.cci = cci\n",
     "\n",
-    "# generate n_patter metadata groups of CC-LR pairs that change across n_conditions\n",
-    "# these changes can either be linear, oscillating, or a pulse; allow homotypic interactions to form patterns\n",
-    "# maximize the possible change in communication score\n",
-    "sim.generate_tensor_md(n_patterns = 4, n_conditions = 12, patterns = ['pulse', 'linear', 'oscillate'], \n",
-    "                      consider_homotypic = True, score_change = 'max')\n",
+    "# # generate n_patter metadata groups of CC-LR pairs that change across n_conditions\n",
+    "# # these changes can either be linear, oscillating, or a pulse; allow homotypic interactions to form patterns\n",
+    "# # maximize the possible change in communication score\n",
+    "# sim.generate_tensor_md(n_patterns = 4, n_conditions = 12, patterns = ['pulse', 'linear', 'oscillate', 'power'], \n",
+    "#                       consider_homotypic = True, score_change = 'max')\n",
     "\n",
-    "#generate a tensor with continuous LR scores and no noise; keep single-cells \n",
-    "sim.generate_tensor(noise = 0, binary = False, bulk = True)\n",
+    "# #generate a tensor with continuous LR scores and no noise; keep single-cells \n",
+    "# sim.generate_tensor(noise = 0, binary = False, bulk = True)\n",
     "\n",
-    "# format the tensor to be input to tensor-cell2cell\n",
-    "sim.reshape()"
+    "# # format the tensor to be input to tensor-cell2cell\n",
+    "# sim.reshape()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Explore"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -846,7 +877,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
