fix bug at CC = 0 and noise > 0

--- a/notebooks/simulation/simulate.ipynb
+++ b/notebooks/simulation/simulate.ipynb
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
     "        if self.n_conditions > 1:\n",
     "            self.clrm[[str(i) for i in range(self.n_conditions)]] = self.clrm[['pattern', 'change', '0']].apply(generate_pattern, args = (self.n_conditions,), axis = 1).tolist()\n",
     "\n",
-    "    def generate_tensor(self, noise, binary = False, bulk = False):\n",
+    "    def generate_tensor(self, noise, binary = False, bulk = False, noise_max = 0.1):\n",
     "        '''Generates the tensor.\n",
     "        \n",
     "        Parameters\n",
@@ -650,6 +650,9 @@
     "            implemented and must be set to False\n",
     "        bulk: bool\n",
     "            whether single-cells should be simulated (False) or cells should be grouped into metadata category (True)\n",
+    "        noise_max: float [0,1]\n",
+    "            the maximum average value of the background noise (@ noise = 1). If None, defaults to the minimum\n",
+    "            average communication score value at condition '0'\n",
     "        \n",
     "        Returns\n",
     "        ---------\n",
@@ -660,6 +663,8 @@
     "        if not binary:\n",
     "            binary = False\n",
     "            warnings.warn('Only continuous scoring is currently implemented')\n",
+    "        if noise > 0 and (noise_max == 0):\n",
+    "            raise ValueError('Noise set to > 0, yet maximum noise is specified at 0. Specify a value larger than 0 or None')\n",
     "        \n",
     "\n",
     "        self.ts = dict() # intitialize\n",
@@ -693,16 +698,19 @@
     "                df.fillna(0, inplace = True) # background\n",
     "                self.ts[cond] = df\n",
     "        else:\n",
-    "            min_val = self.clrm[[str(i) for i in range(self.n_conditions)]].min().min()\n",
-    "            scale = min_val/np.array([utils.piecewise_fit(min_val, *utils.fit_params)])[0]\n",
+    "            if noise_max is None:\n",
+    "                noise_max = self.clrm['0'].min()\n",
+    "            scale = noise_max/np.array([utils.piecewise_fit(noise_max, *utils.fit_params)])[0]\n",
     "            for cond in c_labels:\n",
     "                df = self.ts_frame.copy()\n",
     "                # background\n",
     "                vals = utils.get_truncated_normal(n = self.ts_frame.shape[0]*self.ts_frame.shape[1], \n",
-    "                                                  sd = noise*min_val, mean = 0)*scale\n",
+    "                                                  sd = noise*noise_max, mean = 0)*scale\n",
     "                df[:] = vals.reshape(self.ts_frame.shape)\n",
     "                for idx in self.clrm.index: # non-background\n",
     "                    avg_val = self.clrm.loc[idx, cond]\n",
+    "                    if avg_val == 0:\n",
+    "                        avg_val = 1e-9\n",
     "                    coords = self.clrm.loc[idx, 'ts_coordinates']\n",
     "                    df.values[coords] = utils.get_truncated_normal(n = len(coords[0]), \n",
     "                                                                   sd = noise*avg_val, mean = avg_val)\n",
@@ -757,9 +765,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/hratch/Projects/cci_dt/notebooks/simulation/tmpg8kivho2_bipartite_sf.csv\n",
+      "Generate undirected, bipartite, scale-free graph\n",
+      "Check network properties\n",
+      "All properties are as expected\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "../../scripts/simulation/graphs.py:164: UserWarning: 64 nodes are disconnected, removing from network\n",
+      "  warnings.warn(mssg)\n",
+      "/home/hratch/anaconda3/envs/cci_dt/lib/python3.9/site-packages/pandas/core/internals/blocks.py:983: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "  arr_value = np.array(value)\n",
+      "<ipython-input-51-caac73c0ecd3>:374: UserWarning: Only continuous scoring is currently implemented\n",
+      "  warnings.warn('Only continuous scoring is currently implemented')\n",
+      "<ipython-input-51-caac73c0ecd3>:424: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  df.values[coords] = utils.get_truncated_normal(n = len(coords[0]),\n",
+      "  0%|          | 0/12 [00:00<?, ?it/s]<ipython-input-51-caac73c0ecd3>:460: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  tcs[coords] = ts.iloc[idx,:].values\n",
+      " 17%|█▋        | 2/12 [00:00<00:00, 10.90it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generate reshaped tensor\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 12/12 [00:00<00:00, 12.28it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# # init\n",
     "# sim = Simulate() \n",
@@ -792,72 +842,13 @@
     "# sim.generate_tensor_md(n_patterns = 4, n_conditions = 12, patterns = ['pulse', 'linear', 'oscillate', 'power'], \n",
     "#                       consider_homotypic = True, score_change = 'max')\n",
     "\n",
-    "# #generate a tensor with continuous LR scores and no noise; keep single-cells \n",
-    "# sim.generate_tensor(noise = 0, binary = False, bulk = True)\n",
+    "# #generate a tensor with continuous LR scores and baseline noise; keep single-cells \n",
+    "# # scale maximum noise s.t. at noise = 1, the average background noise is 0.2\n",
+    "\n",
+    "# sim.generate_tensor(noise = 0.1, binary = False, bulk = True, noise_max = 0.2)\n",
     "\n",
     "# # format the tensor to be input to tensor-cell2cell\n",
     "# sim.reshape()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Explore"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # init\n",
-    "# sim = Simulate() \n",
-    "# # sim_norm = Simulate()\n",
-    "\n",
-    "# # simulate a scale_free randomly connected ligand-receptor network (potential interactions)\n",
-    "# sim.LR_network(network_type = 'scale-free', **{'nodes': 100, 'degrees': 3, 'alpha': 2}) #scale-free\n",
-    "\n",
-    "# # # simulate a ranodmly connected network with nomral distributions\n",
-    "# # sim_norm.LR_network(network_type = 'normal', **{'n_ligands': 500, 'n_receptors': 500, 'p': 0.5}) # normally distributed\n",
-    "\n",
-    "\n",
-    "# # LR metadata\n",
-    "# sim.LR.generate_metadata(n_LR_cats = {3: 0}, cat_skew = 0)\n",
-    "\n",
-    "# # generate cell metadata, accounting for directionality (senders vs receivers) and \n",
-    "# # allowing for autocrine interactions \n",
-    "# cci = CCI_MD()\n",
-    "# cci.cci_network(n_cells = 50, directional = True, autocrine = True)\n",
-    "\n",
-    "# # generate 1 metadata categories, with 3 subcategories and 0 skew, the overall skew of categories is 0\n",
-    "# # do not remove homotypic interactions (will be included)\n",
-    "# cci.generate_metadata(n_cell_cats = {3: 0}, cat_skew = 0, remove_homotypic = 0)\n",
-    "# # add cell metadata to simulation object\n",
-    "# sim.cci = cci\n",
-    "\n",
-    "# # generate n_patter metadata groups of CC-LR pairs that change across n_conditions\n",
-    "# # these changes can either be linear, oscillating, or a pulse; allow homotypic interactions to form patterns\n",
-    "# # maximize the possible change in communication score\n",
-    "# sim.generate_tensor_md(n_patterns = 4, n_conditions = 12, patterns = ['pulse', 'linear', 'oscillate'], \n",
-    "#                       consider_homotypic = True, score_change = 'max')\n",
-    "\n",
-    "# #generate a tensor with continuous LR scores and no noise; keep single-cells \n",
-    "# sim.generate_tensor(noise = 0, binary = False, bulk = True)\n",
-    "\n",
-    "# # format the tensor to be input to tensor-cell2cell\n",
-    "# sim.reshape()\n",
-    "\n",
-    "\n",
-    "# dir_nam = 'tmp_maxscore/'\n",
-    "# import pickle\n",
-    "# if not os.path.isdir(dir_nam):\n",
-    "#     os.mkdir(dir_nam)\n",
-    "# for k,v in sim.sim_tensor.__dict__.items():\n",
-    "#     if k != 'rank':\n",
-    "#         with open(dir_nam + k + '.pickle','wb') as f:\n",
-    "#             pickle.dump(v, f, protocol=pickle.HIGHEST_PROTOCOL)"
    ]
   }
  ],
