draft 1 os simulation working with tensor decomposition

--- a/notebooks/simulation/simulate.ipynb
+++ b/notebooks/simulation/simulate.ipynb
@@ -18,6 +18,7 @@
     "import os\n",
     "import warnings\n",
     "import copy\n",
+    "import pickle\n",
     "\n",
     "import uuid\n",
     "import random\n",
@@ -760,7 +761,19 @@
     "                                    lr_metadata = self.LR.LR_metadata, cell_metadata = self.cci.cell_metadata, \n",
     "                                     cell_lr_metadata = self.clrm.drop(columns=['ts_coordinates']))\n",
     "    def copy(self):\n",
-    "        return copy.deepcopy(self)"
+    "        return copy.deepcopy(self)\n",
+    "    \n",
+    "    def pickle(self, filename):\n",
+    "        '''Store Simulate() object as a pickled file. \n",
+    "        \n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        filename: str\n",
+    "            full/path/to/filename.pickle\n",
+    "        '''\n",
+    "        \n",
+    "        with open(filename, 'wb') as f:\n",
+    "            pickle.dump(self, f)"
    ]
   },
   {
