allow .generate_tensor() to be run multiple times when bulk = True

--- a/notebooks/simulation/simulate.ipynb
+++ b/notebooks/simulation/simulate.ipynb
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,6 +390,7 @@
     "\n",
     "        '''\n",
     "        self.cci = None\n",
+    "        self._convert_bulk = None\n",
     "    \n",
     "    def LR_network(self, network_type = None, B = None, subset = False, **params):\n",
     "        '''\n",
@@ -672,22 +673,26 @@
     "        c_labels = [str(i) for i in range(self.n_conditions)]\n",
     "        \n",
     "        if bulk: # consolidate cells into the metadata category\n",
-    "            ccat_map = dict(zip(self.cci.cell_metadata.cell_id, self.cci.cell_metadata.subcategory))\n",
-    "            ccat_map = {cpi: (ccat_map[cpi[0]], ccat_map[cpi[1]]) for cpi in self.ts_frame.columns}\n",
+    "            if self._convert_bulk is None: \n",
+    "                ccat_map = dict(zip(self.cci.cell_metadata.cell_id, self.cci.cell_metadata.subcategory))\n",
+    "                ccat_map = {cpi: (ccat_map[cpi[0]], ccat_map[cpi[1]]) for cpi in self.ts_frame.columns}\n",
     "\n",
-    "            # change matrix to just include cell metadata groupings rather than individual cell IDs\n",
-    "            self.ts_frame = pd.DataFrame(index = self.ts_frame.index, columns = sorted(set(ccat_map.values())))\n",
+    "                # change matrix to just include cell metadata groupings rather than individual cell IDs\n",
+    "                self.ts_frame = pd.DataFrame(index = self.ts_frame.index, columns = sorted(set(ccat_map.values())))\n",
     "\n",
     "\n",
-    "            # rewrite coordinates according to bulk groupings\n",
-    "            def get_coords(x):\n",
-    "                '''Get the coords for each CC-LR metadata pair'''\n",
-    "                col_coord = [j for j,cmd in enumerate(self.ts_frame.columns.tolist()) if cmd == x[0]]\n",
-    "                row_coord = [i for i,lrmd in enumerate(self._lrcats) if lrmd == x[1]]\n",
-    "                coords = list(itertools.product(row_coord, col_coord))\n",
-    "                coords = [tuple(i[0] for i in coords), tuple([i[1] for i in coords])]\n",
-    "                return coords\n",
-    "            self.clrm['ts_coordinates'] = self.clrm[['cell_subcat', 'LR_subcat']].apply(lambda x: get_coords(x), axis = 1).tolist()\n",
+    "                # rewrite coordinates according to bulk groupings\n",
+    "                def get_coords(x):\n",
+    "                    '''Get the coords for each CC-LR metadata pair'''\n",
+    "                    col_coord = [j for j,cmd in enumerate(self.ts_frame.columns.tolist()) if cmd == x[0]]\n",
+    "                    row_coord = [i for i,lrmd in enumerate(self._lrcats) if lrmd == x[1]]\n",
+    "                    coords = list(itertools.product(row_coord, col_coord))\n",
+    "                    coords = [tuple(i[0] for i in coords), tuple([i[1] for i in coords])]\n",
+    "                    return coords\n",
+    "                self.clrm['ts_coordinates'] = self.clrm[['cell_subcat', 'LR_subcat']].apply(lambda x: get_coords(x), axis = 1).tolist()\n",
+    "                self._convert_bulk = True\n",
+    "                # _convert_bulk records if .generate_tensor() method with bulk = True being run for first time\n",
+    "                # allows .generate_tensor() method to be run multiple times (e.g., to test different levels of noise)\n",
     "\n",
     "        if noise == 0:\n",
     "            for cond in c_labels:\n",
